old-skool theme updates, fix catchup-jump backend bug

--- a/tt-rss.css
+++ b/tt-rss.css
@@ -943,6 +943,8 @@ ul.userFeedList {
         list-style-type : none;
 		  border : 1px solid #88b0f0;
         background-color : white;
+        margin : 0px 0px 5px 0px;
+        padding : 0px;
 }
 
 /* #browseBigFeedList li.oddSelected {
